    \item assocCoxPH replaces assocTestCPH. Output format is now similar to assocRegression.
    \item exactHWE replaces gwasExactHWE.
    \item assocRegression, assocCoxPH, and exactHWE include the option to select blocks of SNPs by index for easier parallelization.
    \item scan.chromosome.filter is no longer an option; use setMissingGenotypes to filter data prior to running other functions.
  }
}
\section{Changes in version 1.13.22}{
  \itemize{
    \item Removed "outfile" arguments from batchChisqTest, batchFisherTest, and mendelErr. Saving output to a file should happen outside the function calls.
    \item batchChisqTest and batchFisherTest have snp.include arguments to run on individual SNPs. Using batchFisherTest with this argument is recommended to replace the deprecated assocTestFisherExact.
  } 
}
\section{Changes in version 1.13.23}{
  \itemize{
    \item convertGdsNcdf works for transposed (sample x snp) genotype files.
  } 
}
\section{Changes in version 1.13.24}{
  \itemize{
    \item Added data tables for genome build 38: centromeres.hg38.RData, pseudoautosomal.hg38.RData, HLA.hg38.RData, pcaSnpFilters.hg38.RData.
  } 
}
\section{Changes in version 1.13.26}{
  \itemize{
    \item Added getScanAnnotation, getSnpAnnotation accessors for GenotypeData objects.
  } 
}
\section{Changes in version 1.13.27}{
  \itemize{
    \item Added "snpID" and "scanID" arguments to getGenotypeSelection.
  } 
}
\section{Changes in version 1.15.1}{
  \itemize{
    \item Added "ci" argument to qqPlot function.
  } 
}
\section{Changes in version 1.15.2}{
  \itemize{
    \item Added number of cases and controls to assocRegression output.
  } 
}
\section{Changes in version 1.15.3}{
  \itemize{
    \item Added beta and standard error for GxE term to assocRegression output.
  } 
}
\section{Changes in version 1.15.5}{
  \itemize{
    \item Added option to read genotypes coded with nucleotides in createDataFile.
  } 
}


